--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/200.create-a-table-group-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/200.create-a-table-group-of-mysql-mode.md
@@ -8,7 +8,7 @@ OceanBase 数据库升级过程中，禁止创建表组。
 
 ## 创建表组
 
-创建表组的 SQL 语句如下：
+创建表组需要当前用户拥有全局 `CREATE` 权限。创建表组的 SQL 语句如下：
 
 ```sql
 CREATE TABLEGROUP tablegroup_name [tablegroup_option];
