--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/400.add-tables-to-a-table-group-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/400.add-tables-to-a-table-group-of-mysql-mode.md
@@ -41,6 +41,8 @@ CREATE TABLE table_name column_definition TABLEGROUP = table_name [partition_opt
 
 语句使用说明：
 
+* 执行该语句需要确保当前用户拥有表的 `ALTER` 权限。
+
 * `column_definition`：定义表的列名及数据类型。
 
 * `TABLEGROUP`：指定表所属的表组。
@@ -210,6 +212,8 @@ ALTER TABLEGROUP tablegroup_name ADD [TABLE] table_name [, table_name...];
 ```
 
 语句使用说明：
+
+* 执行该语句需要确保当前用户拥有全局 `ALTER` 权限。
 
 * `tablegroup_name`：待添加表的表组。
 
