--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/500.modify-the-sharding-attribute-ot-a-table-group-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/500.modify-the-sharding-attribute-ot-a-table-group-of-mysql-mode.md
@@ -49,7 +49,9 @@ SHARDING = 'ADAPTIVE'
 
 语句使用说明：
 
-* `tablegroup_name`：待修改的表组名。
+* 执行该语句需要确保当前用户拥有全局 `ALTER` 权限。
+
+*`tablegroup_name`：待修改的表组名。
 
 * `SHARDING`：表组属性。修改表组属性时，需要遵循修改规则。
 
