--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/700.delete-a-table-group-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/400.manage-table-groups-of-mysql-mode/700.delete-a-table-group-of-mysql-mode.md
@@ -14,7 +14,7 @@
 DROP TABLEGROUP [IF EXISTS] tablegroup_name;
 ```
 
-其中，`tablegroup_name` 表示表组名称。如果待删除的表组不存在，并且没有指定 `IF EXISTS`，则系统会报错。
+其中，`tablegroup_name` 表示表组名称。如果待删除的表组不存在，并且没有指定 `IF EXISTS`，则系统会报错。执行该语句需要当前用户具有全局 `DROP` 权限。
 
 删除表组 `tblgroup1` 的示例如下：
 
