--- a/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
@@ -64,7 +64,7 @@ insert into t1 values (1);
 
 -- SQL自身的 consistency_level=WEAK，但由于第一条语句为 STRONG，
 -- 因此这条语句的 consistency_level 强制设置为 STRONG
-select /*+READ_CONSISTENCY(WEAK) */ from t1;
+select /*+READ_CONSISTENCY(WEAK) */ * from t1;
 COMMIT;
 
 BEGIN;
@@ -73,12 +73,12 @@ select * from t1 for update;
 
 -- SQL自身的consistency_level=WEAK，但由于第一条语句为STRONG，
 -- 因此这条语句的consistency_level强制设置为STRONG
-select /*+READ_CONSISTENCY(WEAK) */ from t1;
+select /*+READ_CONSISTENCY(WEAK) */ * from t1;
 COMMIT;
 
 BEGIN;
 -- 第一条语句为WEAK
-select /*+READ_CONSISTENCY(WEAK) */ from t1;
+select /*+READ_CONSISTENCY(WEAK) */ * from t1;
 
 -- 虽然本条语句为STRONG，但是会继承第一条语句的consistency level，会强制设置为WEAK
 select * from t1;
@@ -86,7 +86,7 @@ COMMIT;
 
 BEGIN;
 -- 第一条语句为WEAK
-select /*+READ_CONSISTENCY(WEAK) */ from t1;
+select /*+READ_CONSISTENCY(WEAK) */ * from t1;
 
 -- 修改语句，必须为STRONG，由于第一条语句为WEAK，这里会报错：NOT SUPPORTED
 insert into t1 values (1); 
@@ -162,7 +162,7 @@ V2.2.x 之前的版本仅支持 Proxy 级别的单调读，即只要客户端始
 
 ### V4.x 版本
 
-对于 4.x 版本，`max_stale_time_for_weak_consistency` 和 `weak_read_version_refresh_interval` 两个配置项的功能保持与之前的版本一致。解除了对 `enable_monotonic_weak_read` 的依赖，弱读默认就是租户级别的单调读，不再支持关闭。
+对于 4.x 版本，`max_stale_time_for_weak_consistency` 和 `weak_read_version_refresh_interval` 两个配置项的功能保持与之前的版本一致。解除了对 `enable_monotonic_weak_read` 的依赖，弱读默认就是租户级别的单调读，支持关闭。
 
 ## 弱一致性读时间戳
 
