--- a/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/800.transaction-management/200.transaction-concurrency-and-consistency/500.weak-consistency-reading.md
@@ -162,7 +162,7 @@ V2.2.x 之前的版本仅支持 Proxy 级别的单调读，即只要客户端始
 
 ### V4.x 版本
 
-对于 4.x 版本，`max_stale_time_for_weak_consistency` 和 `weak_read_version_refresh_interval` 两个配置项的功能保持与之前的版本一致。解除了对 `enable_monotonic_weak_read` 的依赖，弱读默认就是租户级别的单调读，支持关闭。
+对于 4.x 版本，`max_stale_time_for_weak_consistency` 和 `weak_read_version_refresh_interval` 两个配置项的功能保持与之前的版本一致。
 
 ## 弱一致性读时间戳
 
