--- a/zh-CN/100.users-guide/300.installation-and-deployment/1500.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/100.users-guide/300.installation-and-deployment/1500.deploy-oceanbase-database-in-the-production-environment.md
@@ -314,10 +314,7 @@ obclient -h<IP> -P<PORT> -uroot@sys -p******
 
 其中，`IP` 为 OBServer 节点的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 `mysql_port` 配置项的值，通过 ODP 连接时为 `listen_port` 配置项的值。
 
-<main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>当通过 ODP 连接并且 OBClient 使用版本为 V2.2.1 时，上述连接命令需要加上 <code>--proxy-mode</code> 参数。</p>
-</main>
+使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../../1400.developer-guide/000.connect-to-oceanbase-database/300.connect-oceanbase-tenants-through-obclient.md)。
 
 ### 步骤六：创建用户租户
 
@@ -329,6 +326,8 @@ obclient -h<IP> -P<PORT> -uroot@sys -p******
 
   ```shell
   obd cluster tenant create <deploy name> [-n <tenant name>] [flags]
+  # example
+  obd cluster tenant create obtest -n obmysql --max-cpu=2 --memory-size=2G --log-disk-size=3G --max-iops=10000 --iops-weight=2 --unit-num=1 --charset=utf8
   ```
 
   命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699) 中 `obd cluster tenant create` 命令。
