--- a/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
+++ b/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
-  <p>本文中的方法仅适用于 OceanBase 数据库快速上手体验，不适用生产环境，如需在生产环境中部署 OceanBase 数据库，请参考 <a href="../300.installation-and-deployment/100.deployment-overview.md">部署 OceanBase 社区版</a> 章节。</p>
+  <p>本文中的方法仅适用于 OceanBase 数据库快速上手体验，不适用生产环境，如需在生产环境中部署 OceanBase 数据库，请参考 <a href="../300.installation-and-deployment/100.deployment-overview.md">安装部署</a> 章节。</p>
 </main>
 
 ## 前提条件
@@ -79,11 +79,13 @@ sudo yum install -y ob-deploy
    obd cluster autodeploy obtest -c single-example.yaml -A
    ```
 
-   > **说明**
-   >
-   > 其中，`obtest` 为集群名称，这里只是示例，您可自行定义集群名称。一个集群只能有一个名称，且集群名称不能重复。`single-example.yaml` 是 OBD 提供的配置文件示例。增加 `-A` 参数后，将自动用系统剩余资源创建 test 租户。
+   * `obtest` 为集群名称，这里只是示例，您可自行定义集群名称。一个集群只能有一个名称，且集群名称不能重复。
 
-2. 运行以下命令查看集群状态。
+   * `single-example.yaml` 是 OBD 提供的配置文件示例，您需根据自身情况进行修改。
+
+   * 增加 `-A` 参数后，将自动用系统剩余资源创建 test 租户。
+
+1. 运行以下命令查看集群状态。
 
    ```shell
    obd cluster display obtest
@@ -101,7 +103,7 @@ sudo yum install -y ob-deploy
 
 2. 使用 OBClient 客户端连接 OceanBase 数据库。
 
-   执行 obd clustere display 命令会自动输出连接命令，复制连接命令执行即可连接 OceanBase 数据库，连接命令示例如下。
+   执行 `obd clustere display` 命令会自动输出连接命令，复制连接命令执行即可连接 OceanBase 数据库，连接命令示例如下。
 
    ```shell
    obclient -h10.10.10.1 -P2881 -uroot@test
