400use Aone：Low error modification3

--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/400.read-data-of-oracle-mode/900.execution-plan-of-oracle-mode/200.understand-the-execution-plan-of-oracle-mode.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/400.read-data-of-oracle-mode/900.execution-plan-of-oracle-mode/200.understand-the-execution-plan-of-oracle-mode.md
@@ -269,37 +269,7 @@ Outputs & filters:
 
 ### MERGE JOIN (MJ)
 
-如下示例中，示例 4 查询使用 `USE_MERGE` 的 Hint 指定了查询使用 MJ。其中，0 号算子是一个 MJ 算子，它有两个子节点，分别是 1 和 3 号算子。该算子会对左右子节点的数据进行归并联接，因此，要求左右子节点的数据相对于联接列是有序的。
-
-以示例 4 查询为例，联接条件为 `tnlj1.c2 = tnlj2.d2`，它要求表 `tnlj1` 的数据是按照 `c2` 列排序的，表 `tnlj2` 的数据是按照 `d2` 列排序的。在示例 4 查询中，2 号算子的输出是无序的；4 号算子的输出是按照 `d2` 列排序的，均不满足 MJ 对序的要求，因此，分配了 1 和 3 号算子进行排序。
-
-```sql
-obclient> EXPLAIN SELECT /*+USE_MERGE(t1, t2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1,tnlj2
-          WHERE c2 = d2 AND c1 + d1 > 10\G
-*************************** 1. row ***************************
-Query Plan: =========================================
-|ID|OPERATOR   |NAME |EST. ROWS|COST    |
------------------------------------------
-|0 |HASH JOIN  |     |32670000 |11332939|
-|1 | TABLE SCAN|TNLJ2|100000   |38681   |
-|2 | TABLE SCAN|TNLJ1|100000   |38681   |
-=========================================
-
-Outputs & filters:
--------------------------------------
-  0 - output([TNLJ1.C2 + TNLJ2.D2]), filter(nil),
-      equal_conds([TNLJ1.C2 = TNLJ2.D2]), other_conds([TNLJ1.C1 + TNLJ2.D1 > 10])
-  1 - output([TNLJ2.D2], [TNLJ2.D1]), filter(nil),
-      access([TNLJ2.D2], [TNLJ2.D1]), partitions(p0)
-  2 - output([TNLJ1.C2], [TNLJ1.C1]), filter(nil),
-      access([TNLJ1.C2], [TNLJ1.C1]), partitions(p0)
-
-1 row in set
-```
-
-#### 示例 5
-
-如下示例中，示例5 查询中联接条件是 `tnlj1.c1 = tnlj2.d1` ，它要求表 `tnlj1` 的数据是按照 `c1` 列排序的，表 `tnlj2` 的数据是按照 `d1` 列排序的。在这个执行计划中，表 `t2` 选择了主表扫描，结果是按照 `d1` 列排序的，因此不需要额外分配一个 `SORT` 算子。理想情况下，`JOIN` 的左右表选择了合适的索引，索引提供的数据顺序能够满足 MJ 的要求，此时不需要分配任何 `SORT` 算子。
+如下示例中，示例 4 查询中联接条件是 `tnlj1.c1 = tnlj2.d1` ，它要求表 `tnlj1` 的数据是按照 `c1` 列排序的，表 `tnlj2` 的数据是按照 `d1` 列排序的。在这个执行计划中，表 `t2` 选择了主表扫描，结果是按照 `d1` 列排序的，因此不需要额外分配一个 `SORT` 算子。理想情况下，`JOIN` 的左右表选择了合适的索引，索引提供的数据顺序能够满足 MJ 的要求，此时不需要分配任何 `SORT` 算子。
 
 ```sql
 obclient> EXPLAIN SELECT /*+USE_MERGE(tnlj1, tnlj2)*/ tnlj1.c2 + tnlj2.d2 FROM tnlj1, tnlj2
@@ -334,11 +304,11 @@ Outputs & filters:
 | output      | 该算子输出的表达式。                                                     |
 | filter      | 该算子上的过滤条件。 由于 MJ 算子没有设置 `filter`，所以为 `nil`。    |
 | equal_conds | 归并联接时使用的等值联接条件，左右子节点的结果集相对于联接列必须是有序的。                          |
-| other_conds | 其他联接条件。 例如 Q4 查询中的 `tnlj.c1 + tnlj2.d1 > 10` 。 |
+| other_conds | 其他联接条件。 |
 
 ### HASH JOIN (HJ)
 
-如下示例中，示例6 查询使用 `USE_HASH` 的 Hint 指定了查询使用 HJ。其中，0 号算子是一个 HJ 算子，它有两个子节点，分别是 1 和 2 号算子。该算子的执行逻辑步骤如下：
+如下示例中，示例 5 查询使用 `USE_HASH` 的 Hint 指定了查询使用 HJ。其中，0 号算子是一个 HJ 算子，它有两个子节点，分别是 1 和 2 号算子。该算子的执行逻辑步骤如下：
 
 1. 读取左子节点的数据，根据联接列计算哈希值（例如 `tnlj1.c1`），构建一张哈希表。
 
@@ -375,6 +345,6 @@ Outputs & filters:
 | output      | 该算子输出的表达式。                                                     |
 | filter      | 该算子上的过滤条件。 由于 HJ 算子没有设置 `filter`，所以为 `nil`。    |
 | equal_conds | 等值联接，左右两侧的联接列会用于计算哈希值。                                         |
-| other_conds | 其他联接条件。 例如示例 6 查询中的 `tnlj1.c2 + tnlj2.d2 > 1`。 |
+| other_conds | 其他联接条件。 例如示例 5 查询中的 `tnlj1.c2 + tnlj2.d2 > 1`。 |
 
 关于执行计划的详细信息，请参考官方文档 《OceanBase 数据库性能调优》的 **SQL 调优** 章节。
