--- a/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
+++ b/zh-CN/100.users-guide/200.Get-started-quickly/000.Quickly-experience-OceanBase.md
@@ -85,7 +85,7 @@ sudo yum install -y ob-deploy
 
    * 增加 `-A` 参数后，将自动用系统剩余资源创建 test 租户。
 
-1. 运行以下命令查看集群状态。
+2. 运行以下命令查看集群状态。
 
    ```shell
    obd cluster display obtest
@@ -117,7 +117,7 @@ sudo yum install -y ob-deploy
 
 运行如下命令，拉取 OceanBase 数据库所需镜像。
 
-* 搜索 OceanBase 数据库相关镜像。
+* 搜索 OceanBase 数据库相关镜像
   
   ```shell
   [admin@test001 ~]$ docker search oceanbase
