--- a/zh-CN/100.users-guide/300.installation-and-deployment/1500.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/100.users-guide/300.installation-and-deployment/1500.deploy-oceanbase-database-in-the-production-environment.md
@@ -44,22 +44,26 @@
 
 ## 操作步骤
 
+> **注意**
+>
+> * 以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。
+>
+> * 部署 OceanBase 集群之前，为了数据安全，建议您切换到非 root 用户。
+
 ### 步骤一：安装 OBD
 
 > **说明**
 >
-> * 您只需要在中控机器上安装 OBD，安装 OBD 时需要 root 权限。
->
-> * 请安装 V1.4.0 以上版本的 OBD，建议安装最新版本。
+> * 您只需要在中控机器上安装 OBD，建议安装最新版本。
 
 #### 在线安装 OBD
 
 如您的机器可以访问公网，并能够添加三方 YUM 软件源，您可以执行以下命令，使用 OceanBase 的官方软件源安装 OBD：
 
 ```bash
-yum install -y yum-utils
-yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
-yum install -y ob-deploy
+sudo yum install -y yum-utils
+sudo yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
+sudo yum install -y ob-deploy
 ```
 
 > **注意**
@@ -73,30 +77,26 @@ yum install -y ob-deploy
 在 CentOS 或 RedHat 系统上，在安装包所在目录下执行如下命令安装 OBD：
 
 ```bash
-yum install ob-deploy-x.x.x.el7.x86_64.rpm
+sudo yum install ob-deploy-x.x.x.el7.x86_64.rpm
 ```
 
 在 Ubuntu 或 Debian 系统上，在安装包所在目录下执行如下命令安装 OBD：
 
 ```bash
-alien --scripts -i ob-deploy-x.x.x.el7.x86_64.rpm
+sudo alien --scripts -i ob-deploy-x.x.x.el7.x86_64.rpm
 ```
 
 ### 步骤二：安装 OBClient
 
 您只需要在中控机器上安装 OBClient。
 
-> **注意**
->
-> 安装 OBClient 需要 root 权限。
-
 #### 在线安装 OBClient
 
 执行以下命令，在线安装 OBLibs：
 
 ```bash
-yum install -y libobclient
-yum install -y obclient
+sudo yum install -y libobclient
+sudo yum install -y obclient
 ```
 
 #### 离线安装 OBClient
@@ -106,20 +106,18 @@ yum install -y obclient
 在 CentOS 或 RedHat 系统上，在安装包所在目录下执行如下命令安装 OBClient：
 
 ```bash
-yum install libobclient-x.x.x.el7.x86_64.rpm
-yum install obclient-x.x.x-2.el7.x86_64.rpm
+sudo yum install libobclient-x.x.x.el7.x86_64.rpm
+sudo yum install obclient-x.x.x-2.el7.x86_64.rpm
 ```
 
 在 Ubuntu 或 Debian 系统上，在安装包所在目录下执行如下命令安装 OBClient：
 
 ```bash
-alien --scripts -i libobclient-x.x.x.el7.x86_64.rpm
-alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
+sudo alien --scripts -i libobclient-x.x.x.el7.x86_64.rpm
+sudo alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
 ```
 
 ### 步骤三：配置 OBD
-
-部署 OceanBase 集群之前，为了数据安全，建议您切换到非 root 用户。
 
 如果离线安装 OceanBase 集群，可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载 OceanBase 数据库、OBLibs 和 ODP。下载完成后，将下载的安装包复制到中控机器上任一目录下，并在该目录下参考以下步骤配置 OBD。如果在线安装，则跳过步骤 1\~3。
 
@@ -179,7 +177,7 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
         <p>在配置秘钥路径后，如果您的秘钥不需要口令，请注释或者删除 <code>password</code>，以免 <code>password</code> 被视为秘钥口令用于登录，导致校验失败。</p>
       </main>
 
-   2. 修改机器的 IP、端口和相关目录，并配置内存相关参数及密码。
+   2. 修改机器的 IP、端口和相关目录，并配置内存相关参数及密码
 
       OceanBase 数据库详细参数介绍，参考 [OceanBase 数据库参数](https://github.com/oceanbase/obdeploy/blob/master/plugins/oceanbase/3.1.0/parameter.yaml)。
 
@@ -240,7 +238,7 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
         <p>配置文件中对应 server 中的配置优先级高于 <code>global</code>。</p>
       </main>
 
-   3. 配置 obproxy-ce 组件并修改 IP 和 `home_path`。
+   3. 配置 obproxy-ce 组件并修改 IP 和 `home_path`
 
       ```yaml
       obproxy-ce:
