--- a/zh-CN/100.users-guide/300.installation-and-deployment/400.environment-and-configuration-checks/300.configure-the-clock-source-optional.md
+++ b/zh-CN/100.users-guide/300.installation-and-deployment/400.environment-and-configuration-checks/300.configure-the-clock-source-optional.md
@@ -101,7 +101,7 @@
       在配置文件中添加以下内容：
 
       ```shell
-      server <yout_ntp_server_ip>
+      server <your_ntp_server_ip>
       ```
 
    5. 运行以下命令，启动 NTP 服务：
