--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/600.transaction-in-develop-of-mysql-mode/200.start-a-transaction-of-mysql-mode.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/600.transaction-in-develop-of-mysql-mode/200.start-a-transaction-of-mysql-mode.md
@@ -79,7 +79,7 @@ Query OK, 1 row affected
 Rows matched: 1  Changed: 1  Warnings: 0
 ```
 
-执行成功后，可以使用 `oceanbase.V$OB_TRANSACTION_PARTICIPANTS` 查询事务的状态。
+执行成功后，可以使用 `oceanbase.V$OB_TRANSACTION_PARTICIPANTS` 查询活跃事务的参与者信息。
 
 ```sql
 obclient [test]> SELECT * FROM oceanbase.V$OB_TRANSACTION_PARTICIPANTS;
