--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/600.transaction-in-develop-of-oracle-mode/200.start-a-transaction-of-oracle-mode.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/600.transaction-in-develop-of-oracle-mode/200.start-a-transaction-of-oracle-mode.md
@@ -84,7 +84,7 @@ Query OK, 1 row affected
 Rows matched: 1  Changed: 1  Warnings: 0
 ```
 
-可以通过视图 `V$OB_TRANSACTION_PARTICIPANTS` 查询事务的状态。
+可以通过视图 `V$OB_TRANSACTION_PARTICIPANTS` 查询活跃事务的参与者信息。
 
 ```sql
 obclient [SYS]> SELECT * FROM V$OB_TRANSACTION_PARTICIPANTS;
