--- a/zh-CN/600.manage/700.monitor/100.monitor-overview.md
+++ b/zh-CN/600.manage/700.monitor/100.monitor-overview.md
@@ -38,7 +38,7 @@ OceanBase 常用的动态性能视图见如下列表：
 |`GV$LATCH`|锁统计信息。|
 |`GV$OB_MEMORY`|	内存信息。|
 |`GV$OB_PROCESSLIST`|	会话信息。|
-|`GV$OB_TRANSACTION_PARTICIPANTS`|事务信息。|
+|`GV$OB_TRANSACTION_PARTICIPANTS`|活跃事务的参与者信息。|
 |`GV$OB_SQL_AUDIT`|	SQL 统计信息。|
 |`GV$SQL_PLAN_MONITOR`|	SQL 算子级统计信息。|
 |`GV$OB_PLAN_CACHE_STAT`|	Plan Cache 统计信息。|
