--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/4900.v-ob_transaction_participants-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/4900.v-ob_transaction_participants-of-oracle-mode.md
@@ -4,7 +4,8 @@ V$OB_TRANSACTION_PARTICIPANTS
 功能 
 -------------------
 
-展示当前 OBServer 节点上的事务参与者上下文信息。
+展示所有 OBServer 节点上活跃事务的参与者信息。
+
 
 字段说明 
 ---------------------
