--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/8900.truncate-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/8900.truncate-table-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于完全清空指定表，但是保留表结构，包括表中定义的 Partition 信息。从逻辑上说，该语句与用于删除所有行的 `DELETE FROM` 语句相同。
 
-执行 `TRUNCATE` 语句，必须具有表的删除和创建权限。它属于 DDL 语句。
+执行 `TRUNCATE` 语句，必须具有表的删除（`DROP`）权限。它属于 DDL 语句。
 
 `TRUNCATE TABLE` 语句与 `DELETE FROM` 语句有以下不同：
 
