--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/4500.truncate-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/4500.truncate-table-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于完全清空指定表，但是保留表结构，包括表中定义的分区信息。从逻辑上说，该语句与用于删除所有行的 `DELETE FROM` 语句相同。
 
-执行 `TRUNCATE` 语句，必须具有表的删除和创建权限。
+执行 `TRUNCATE` 语句，必须具有表的删除（`DROP`）权限，如果不是用户自己的表则需要具有 `DROP ANY TABLE` 权限。
 
 `TRUNCATE TABLE` 语句与 `DELETE FROM` 语句有以下不同：
 
