--- a/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
+++ b/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
@@ -72,7 +72,7 @@ tab MySQL 模式
   |   **类型**    | **最大长度**     |
   |---------------|------------------|
   | `CHAR`        | 256 字节         |
-  | `VARCHAR`     | 1048576 字节     |
+  | `VARCHAR`     | 262144 字节     |
   | `BINARY`      | 256 字节         |
   | `VARBINARY`   | 1048576 字节     |
   | `TINYBLOB`    | 255 字节         |
