--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5400.v-memstore-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/5400.v-memstore-of-oracle-mode.md
@@ -18,4 +18,4 @@ V$OB_MEMSTORE
 | FREEZE_TRIGGER | NUMBER(38)   | NO             | 触发 MemTable 冻结的内存大小，单位为字节        |
 | FREEZE_CNT     | NUMBER(38)   | NO             | MemTable 的冻结次数                   |
 | MEMSTORE_USED  | NUMBER(38)   | NO             | MemTable 目前使用的总内存大小，单位为字节        |
-| MEM_LIMIT      | NUMBER(38)   | NO             | MemTable 的内存大小限制，单位为字节           |
+| MEMSTORE_LIMIT       | NUMBER(38)   | NO             | MemTable 的内存大小限制，单位为字节           |
