--- a/en-US/700.reference/500.system-reference/500.system-overview-of-oracle-mode/300.performance-view-of-oracle-mode/1800.gv-memstore-of-oracle-mode.md
+++ b/en-US/700.reference/500.system-reference/500.system-overview-of-oracle-mode/300.performance-view-of-oracle-mode/1800.gv-memstore-of-oracle-mode.md
@@ -18,4 +18,4 @@ Fields
 | FREEZE_TRIGGER | NUMBER(38) | NO | The memory size in bytes that will trigger a MemTable freeze. |
 | FREEZE_CNT | NUMBER(38) | NO | The number of MemTable freezes. |
 | MEMSTORE_USED | NUMBER(38) | NO | The total memory in bytes currently used by MemTables. |
-| MEM_LIMIT | NUMBER(38) | NO | The maximum size in bytes of memory that MemTables can occupy. |
+| MEMSTORE_LIMIT | NUMBER(38) | NO | The maximum size in bytes of memory that MemTables can occupy. |
