--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/24600.ob_startup_mode.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/24600.ob_startup_mode.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>从 V1.4 版本开始引入。</p>
+  <p>该配置项从 V4.1.0 版本开始引入。</p>
 </main>
 
 | **属性** | **描述** |
