--- a/zh-CN/700.reference/500.system-reference/100.system-configuration-items/200.system-configuration-items-overview-list.md
+++ b/zh-CN/700.reference/500.system-reference/100.system-configuration-items/200.system-configuration-items-overview-list.md
@@ -246,7 +246,7 @@
 | [ssl_client_authentication](300.cluster-level-configuration-items/19400.ssl_client_authentication.md)           | 用于设置是否开启 SSL 连接功能。                                                                                                  |
 | [stack_size](300.cluster-level-configuration-items/19600.stack_size.md)                          | 用于设置程序函数调用栈的大小。                                                                                                     |
 | [tenant_task_queue_size](300.cluster-level-configuration-items/21600.tenant_task_queue_size.md)              | 用于设置每个租户的请求队列大小。                                                                                                    |
-| [zone](300.cluster-level-configuration-items/23300.zone-parameter.md)                                | 用于设置节点所在的 Zone 的名字。该配置项一般不需要配置。                                                                                     |
+| [zone](300.cluster-level-configuration-items/23300.zone-cluster.md)                                | 用于设置节点所在的 Zone 的名字。该配置项一般不需要配置。                                                                                     |
 | [ssl_external_kms_info](300.cluster-level-configuration-items/19500.ssl_external_kms_info.md)               | 用于记录 OceanBase 数据库 SSL 功能运行依赖的一些信息，通过 json 字符串方式记录不同 SSL 使用方式下依赖的相关配置，json 中至少包含类型 `ssl_mode` 字段。                   |
 | [recyclebin_object_expire_time](300.cluster-level-configuration-items/16600.recyclebin_object_expire_time.md)       | 用于自动 Purge 回收站中过期的 Schema 对象。                                                                                       |
 | [default_row_format](300.cluster-level-configuration-items/5900.default_row_format.md)                  | 用于设置在 MySQL 模式下，建表时使用的默认行格式。                                                                                        |
