--- a/en-US/100.Get-Started/500.Experience-OceanBase-Advanced-Features/100.Experience-Scalable-OLTP/200.Experience-the-hot-row-update-capability-of-OceanBase-Database.md
+++ b/en-US/100.Get-Started/500.Experience-OceanBase-Advanced-Features/100.Experience-Scalable-OLTP/200.Experience-the-hot-row-update-capability-of-OceanBase-Database.md
@@ -38,7 +38,7 @@ import threading
 # database connection info
 config = {
     'user': 'root@test',
-    'password': 'root',
+    'password': '****',
     'host': '172.19.81.183',
     'port': 2881,
     'database': 'test'
