--- a/en-US/100.Get-Started/500.Experience-OceanBase-Advanced-Features/100.Experience-Scalable-OLTP/100.Run-the-TPC-C-benchmark-test-in-OceanBase-Database.md
+++ b/en-US/100.Get-Started/500.Experience-OceanBase-Advanced-Features/100.Experience-Scalable-OLTP/100.Run-the-TPC-C-benchmark-test-in-OceanBase-Database.md
@@ -44,7 +44,7 @@ db=oceanbase
 driver=com.mysql.jdbc.Driver
 conn=jdbc:mysql://127.0.0.1:2881/tpccdb?useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&allowMultiQueries=true
 user=root@test
-password=****
+password=root
 
 warehouses=10
 loadWorkers=2
