--- a/zh-CN/100.users-guide/300.installation-and-deployment/1300.build-oceanbase-database-by-using-source-code.md
+++ b/zh-CN/100.users-guide/300.installation-and-deployment/1300.build-oceanbase-database-by-using-source-code.md
@@ -40,7 +40,7 @@ git clone git@${GIT_MIRROR_ADDRESS}/oceanbase/oceanbase
 
 ## 获取构建依赖
 
-您可以通过以下方式获取构建依赖：
+您可以通过以下方式获取构建依赖。
 
 ### 方案一：使用 yum 源获取依赖包（推荐）
 
