--- a/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/100.overview-of-sql_diagnoser.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/100.overview-of-sql_diagnoser.md
@@ -4,7 +4,7 @@
 
 ## 什么是 SQL Diagnoser
 
- SQL Diagnoser 是一款敏捷版 SQL 诊断工具，可直接分析业务集群，找出常见的可疑 SQL 及隐藏的性能问题。
+ SQL Diagnoser 是一款敏捷版 SQL 诊断工具，可直接分析业务集群，找出常见的可疑 SQL 及隐藏的性能问题，同时也支持 SQL Review，用户可以在 SQL Review 功能页面输入SQL 进行分析，检测是否存在问题。
 
 ## SQL Diagnoser 功能特点
 
