--- a/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/100.install-and-deploy-sql_diagnoser.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/100.install-and-deploy-sql_diagnoser.md
@@ -2,15 +2,15 @@
 
 本文将介绍安装 SQL Diagnoser 的方法。
 
-#### 环境要求
+## 环境要求
 
 安装 SQL Diagnoser 需要 JDK 8 版本及以上。
 
-#### 前提条件
+## 前提条件
 
 SQL Diagnoser 的默认端口 8080 未被占用。同时您也可以自定义端口。
 
-#### 安装步骤
+## 安装步骤
 
 1. 通过 [下载页面](https://open.oceanbase.com/softwareCenter/community) 下载 SQL Diagnoser 安装包，并进行解压。
 2. 运行以下命令进行安装。
