--- a/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/200.sql_diagnoser-development-guide.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/200.deploy-and-use-delsql_diagnoser/200.sql_diagnoser-development-guide.md
@@ -22,7 +22,7 @@
   <ol>
     <li>诊断规则和诊断结果中关于时间的属性都未做单位处理，实际与 <code>gv$ob_sql_audit</code> 中的原始单位一致。比如 elapsed_time 单位为 us，CPU 时间由<code>execution_time + get_plan_time - total_wait_time_micro</code> 计算而来，单位同样为 us。</li>
     <li>SQL Diagnoser 第一次启动时，会在当前用户主目录下创建文件夹 <code>h2</code>及其相关数据文件，若删除这些文件，诊断规则会重置。若想持久化对诊断规则的修改，请不要移动、修改或删除这些文件。</li>
-    <li>诊断默认过滤掉 OceanBase 数据库（OB 部署后默认创建名为 oceanBase 的数据库），请不要在该数据库下测试本工具功能。</li>
+    <li>诊断默认过滤掉 OceanBase 数据库（OceanBase 数据库部署后默认创建名为 oceanbase 的数据库），请不要在该数据库下测试本工具功能。</li>
     <li>为降低诊断对系统租户的压力及降低工具本身的负载，每次诊断最多从 <code>gv$ob_sql_audit</code> 中提取 10000 条数据（按响应时间倒序），因此不能进行全量诊断。若想调整诊断数据量，建议以接口调用的方式指定最大返回行数 <code>queryLimit</code>； 或者在启动本工具时，设置环境变量 <code>sql.diagnose.sql.query-sql-audit-limit</code>，如 <code>nohup java -Dsql.diagnose.sql.query-sql-audit-limit=12345 -Dserver.port=9090 -jar sql-diagnoser-4.2.0.0.jar &</code>。</li>
   </ol>
 </main>
@@ -34,9 +34,10 @@ SQL Diagnoser 除 [内置诊断项](../300.sql_diagnoser-paramenters/100.sql_dia
 1. 通过 Web Console 连接该数据库，数据库地址为 `http://ip:port/h2-console` 。
    如 SQL Diagnoser 的部署地址为 `http://10.10.0.1:8080` ，则内置数据库的地址为 `http://10.10.0.1:8080/h2-console` 。
 
-    > **注意**
-    >
-    > 登录界面除默认值外，JDBC URL为`jdbc:h2:mem:e2ad8a5e-5f26-496c-9cfe-b528aa79****`，用户名为 `sa` ，无需输入密码，直接登录即可。
+    <main id="notice" type='notice'>
+      <h4>注意</h4>
+      <p>登录界面除默认值外，JDBC URL 为 <code>jdbc:h2:mem:e2ad8a5e-5f26-496c-9cfe-b528aa79****</code>，用户名为 <code>sa</code> ，无需输入密码，直接登录即可。</p>
+    </main>
 
 2. 连接 Web Console 后，找到 `diagnose_rule` 表，可以看到该表内置的诊断项规则。您可对诊断项规则进行修改。
 
