--- a/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/300.sql_diagnoser-paramenters/300.sql_diagnoser-api.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1250.sql_diagnoser/300.sql_diagnoser-paramenters/300.sql_diagnoser-api.md
@@ -8,5 +8,8 @@
    * 删除诊断规则接口地址： `http://ip:port/swagger-ui/index.html#/sql-diagnose-controller/deleteDiagnoseRuleUsingDELETE`。
    * 新增规则诊断接口地址： `http://ip:port/swagger-ui/index.html#/sql-diagnose-controller/addDiagnoseRuleUsingPOST`。
    * 更新诊断规则接口地址： `http://ip:port/swagger-ui/index.html#/sql-diagnose-controller/updateDiagnoseRuleUsingPOST` 。
-> **说明**
-> `ip:port` 为 SQL Diagnoser 的部署地址，您需根据实际部署地址进行更改。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p><code>ip:port</code> 为 SQL Diagnoser 的部署地址，您需根据实际部署地址进行更改。</p>
+</main>
