--- a/zh-CN/400.installation-and-deployment/100.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/400.installation-and-deployment/100.deploy-oceanbase-database-in-the-production-environment.md
@@ -328,7 +328,7 @@ obclient -h<IP> -P<PORT> -uroot@sys -p******
 
 其中，`IP` 为 OBServer 节点的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 `mysql_port` 配置项的值，通过 ODP 连接时为 `listen_port` 配置项的值。
 
-使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../../1400.developer-guide/000.connect-to-oceanbase-database/300.connect-oceanbase-tenants-through-obclient.md)。
+使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../700.developer-guide/200.connect-to-oceanbase-database/200.connect-to-an-oceanbase-database-tenant-through-obclient.md)。
 
 ### 步骤六：创建用户租户
 
@@ -353,4 +353,3 @@ obclient -h<IP> -P<PORT> -uroot@sys -p******
   ```
 
   创建租户的详细命令介绍请参考 [新建租户](../600.administrator-guide/200.basic-database-management/400.manage-tenants/200.create-a-tenant.md)。
-  
