--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -32,7 +32,7 @@
 | 内存使用           | \[0,64M\]       | 内存上限 *50%   |  0 M  |
 | 内存使用           | \[64M,100M\]    | 内存上限-20M    | 内存上限-40 M     |
 | 内存使用           | \[100M,5G\]     | 内存上限 *80%   | 内存上限 *60%    |
-| 内存使用           | \[5G,+∞\]       | 内存上限-1G    |内存上限-2 G     |
+| 内存使用           | \[5G,+∞）       | 内存上限-1G    |内存上限-2 G     |
 | 记录数           | 无         |  900 万    |  800万    |  
 
 ## GV$OB_SQL_AUDIT 字段说明
