--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/14200.dbms-scheduler-oracle/1100.set-attribute-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/14200.dbms-scheduler-oracle/1100.set-attribute-oracle.md
@@ -36,7 +36,7 @@ OceanBase 数据库当前版本支持如下作业相关的属性值。
 
 |        属性名称      |         说明          |
 |--------------------|-------------------------|
-| auto_drop          | 该属性可以设置为 `TRUE` 或者 `FALSE`，如果设置为 `TRUE`，则会导致作业在完成后自动删除或自动禁用。 如果出现以下情况，则认为作业已完成： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li> 作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。 默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。 |
+| auto_drop          | 该属性可以设置为 `TRUE` 或者 `FALSE`，如果设置为 `TRUE`，则会导致作业在完成或自动禁用后自动删除。 如果出现以下情况，则认为作业已完成： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li> 作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。 默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。 |
 | comments           | 注释，为可选项。    |
 | credential_name    | 此属性指定用于作业的凭据对象的名称。 对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
 | destination_name   | 指定作业的数据库目标或外部目标。仅用于远程数据库作业和远程外部作业。对于在本地数据库上运行的作业或本地外部作业（可执行文件），此属性必须为 `NULL`。  |
