--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/14200.dbms-scheduler-oracle/200.create-job-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/14200.dbms-scheduler-oracle/200.create-job-oracle.md
@@ -65,7 +65,7 @@ max_run_duration    IN  BINARY_INTEGER DEFAULT 0);
 | end_date           | 指定作业过期时间，即不再运行的日期和时间。 在 `end_date` 之后，如果 `auto_drop` 为 `TRUE`，则作业将被删除。如果 `auto_drop` 为 `FALSE`，则作业被禁用，而且作业的 `STATE` 设置为 `COMPLETED`。 如果未指定 `end_date` 的值，则作业将被一直重复执行，除非设置了 `max_runs` 或者 `max_failures`，在这种情况下，当达到其中任一值时，作业将停止运行。 `end_date` 的值必须在 `start_date` 的值之后，否则会报错。如果 `end_date` 的值与 `start_date` 的值相同，则作业不会被执行，也不会报错。 |
 | job_class          | 与此作业相关联的类。 |
 | enabled            | 指定是否启用创建的作业。该属性可以设置为 `TRUE` 或者 `FALSE`，默认为 `FALSE`，即创建的作业将被禁用。 对于已禁用的作业，虽然已捕获该作业的相关元数据，并且该作业也属于数据库对象，但是，Scheduler 会忽略该作业，也不会处理该作业。如果想处理该作业，可以通过将此参数设置为 `TRUE` 或使用 `ENABLE` 过程来启用作业。  |
-| auto_drop          | 指定作业在完成或自动禁用后是否自动删除。该属性可以设置为 `TRUE` or `FALSE`，如果设置为 `TRUE`，则会导致作业在完成后自动删除或自动禁用。如果出现以下情况，则认为已完成作业： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li>作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。                                |
+| auto_drop          | 指定作业在完成或自动禁用后是否自动删除。该属性可以设置为 `TRUE` 或者 `FALSE`，如果设置为 `TRUE`，则会导致作业在完成或自动禁用后自动删除。如果出现以下情况，则认为已完成作业： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li>作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。                                |
 | comments           | 添加作业的注释。默认情况下，该属性为 `NULL`。  |
 | job_style          | 指定正在创建的作业的样式。 此属性可能的取值如下： <ul><li> `'REGULAR' `：创建常规工作，为默认设置。   </li><li> `'LIGHTWEIGHT'`：创建轻量级作业。仅当作业引用程序对象时，才允许使用此值。当您需要频繁运行许多短期作业时，建议使用轻量级作业。在某些情况下，使用轻量级作业可以带来较小的性能提升。   </li><li> `'IN_MEMORY_RUNTIME'`：创建内存内运行时作业。这些作业基于轻量级工作结构，它们通过保持内存内缓存进一步提高了性能，因此可以最大限度地减少运行前和运行后操作的磁盘访问。   </li><li> `'IN_MEMORY_FULL'`：创建内存内已满的作业。内存中的完整作业需要一个程序，不能有时间计划或重复间隔。当作业启用时，它们会自动运行，运行后会被丢弃。它们将所有作业信息保存在内存中，不会备份到磁盘上，也就是说在实例重新启动时这些信息会丢失。它们的目的是以尽可能少的开销运行必须立即执行的操作。 </li></ul>    |
 | credential_name    | 指定与作业一起使用的默认凭据。对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
