--- a/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/400.optimizer-statistics/300.statistics-management/400.import-and-export.md
+++ b/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/400.optimizer-statistics/300.statistics-management/400.import-and-export.md
@@ -143,13 +143,13 @@ PROCEDURE export_index_stats (
 导入功能
 -------------------------
 
-目前支持如下三种导出统计信息的方式：
+目前支持如下三种导入统计信息的方式：
 
-* 使用存储过程 `import_table_stats`导入表级的统计信息。
+* 使用存储过程 `import_table_stats` 导入表级的统计信息。
 
-* 使用存储过程 `import_column_stats`导入列级的统计信息。
+* 使用存储过程 `import_column_stats` 导入列级的统计信息。
 
-* 使用存储过程 `import_schema_stats`导入 Schema下所有表的统计信息。
+* 使用存储过程 `import_schema_stats` 导入 Schema 下所有表的统计信息。
 
 * 使用存储过程 `import_index_stats` 导入索引统计信息。
 
