--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1600.gather-index-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1600.gather-index-stats-oracle.md
@@ -62,7 +62,7 @@ PROCEDURE GATHER_INDEX_STATS (
 收集用户 `testUser01` 的 `tbl1` 表的索引 `idx` 的统计信息。
 
 ```sql
-obclient> call dbms_stats.gather_index_stats('testUser01', 'idx1', degree=>4, tabname=>'tbl1');
+obclient> call dbms_stats.gather_index_stats('testUser01', 'idx1', degree=>4, 'tbl1');
 Query OK, 0 rows affected
 ```
 
