--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/200.sql-execution-plan/600.sql-optimization-practice-case.md
@@ -8,14 +8,14 @@
 
 1. 通过查询 `GV$OB_SQL_AUDIT` 视图定位 TOP SQL。
 
-   执行如下 SQL 语句查询 `GV$OB_SQL_AUDIT` 视图定位问题 SQL。本案例主要查询问题发生 30 分钟的时间段内指定的 OBserver 节点上（`svr_ip`）的 SQL (`GROUP BY sql_id`) 相比于问题时间段内总 CPU 的使用率（`SUM(execute_time)/(30*60*1000*1000）AS cup_cnt`）等信息。
+   执行如下 SQL 语句查询 `GV$OB_SQL_AUDIT` 视图定位问题 SQL。本案例主要查询问题发生 30 分钟的时间段内指定的 OBserver 节点上（`svr_ip`）的 SQL (`GROUP BY sql_id`) 相比于问题时间段内总 CPU 的使用率（`SUM(execute_time)/(30*60*1000*1000）AS cpu_cnt`）等信息。
 
    ```shell
    SELECT sql_id,
           COUNT(*)               AS executions,
-          SUM(execute_time)      AS tot_cup_time,
-          AVG(execute_time)      AS avg_cup_time,
-          SUM(execute_time)/(30*60*1000*1000)     AS cup_cnt,
+          SUM(execute_time)      AS tot_cpu_time,
+          AVG(execute_time)      AS avg_cpu_time,
+          SUM(execute_time)/(30*60*1000*1000)     AS cpu_cnt,
           query_sql
        FROM oceanbase.GV$OB_SQL_AUDIT
        WHERE tenant_id= 'mysql001'
@@ -24,14 +24,14 @@
            AND is_executor_rpc =0 
            GROUP BY sql_id
            HAVING COUNT(*)>1
-           ORDER BY cup_cnt DESC LIMIT 10;
+           ORDER BY cpu_cnt DESC LIMIT 10;
    ```
 
    查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (...))` 类别 SQL 的执行频率和 CPU 使用率较高，大概为 70%（80 c/108 c），而且集中于同一台 OBServer 节点上。
 
    ```shell
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
-   |       sql_id                     | executions | tot_cup_time | avg_cup_time | cup_cnt | query_sql      |
+   |       sql_id                     | executions | tot_cpu_time | avg_cpu_time | cpu_cnt | query_sql      |
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
    | 2705182A6EAB699CEC8E59DA80710B64 |   23,425 |   33,818,182,526  |      1,443,679 |      56 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
    | 32AB97A0126F566064F84DDDF4936F82 |    7,112 |     7,926.295,919 |      1,114,496 |      13 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20035891,20035892)) |
