--- a/zh-CN/700.reference/1500.command-line-tools/1500.ob-partition-calculator/100.introduction-ob-partition-calculator.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1500.ob-partition-calculator/100.introduction-ob-partition-calculator.md
@@ -54,10 +54,10 @@
 
 分区计算组件支持对 OceanBase 数据库规定的可以作为分区键的字段类型进行计算。具体涉及的字段类型参考如下：
 
-MySQL 模式下：[分区概述](../../200.administrator-guide/400.replica-management/200.manage-partition-table/200.mysql-mode/100.partition-overview-of-mysql-mode.md)
+MySQL 模式下：[分区概述](../../300.database-object-management/100.manage-object-of-mysql-mode/300.manage-partitions-of-mysql-mode/100.partition-overview-of-mysql-mode.md)
 
-Oracle 模式下：[分区概述](../../200.administrator-guide/400.replica-management/200.manage-partition-table/100.oracle-mode/100.partition-overview-of-oracle-mode.md)
+Oracle 模式下：[分区概述](../../300.database-object-management/200.manage-object-of-oracle-mode/200.manage-partitions-of-oracle-mode/100.partition-overview-of-oracle-mode.md)
 
 ## 调用方法
 
-分区计算组件的详细调用方法可参考 [分区计算组件使用介绍](../700.ob-partition-calculator/200.use-of-the-ob-partition-calculator.md)
+分区计算组件的详细调用方法可参考 [分区计算组件使用介绍](200.use-of-the-ob-partition-calculator.md)
