--- a/zh-CN/700.reference/1500.command-line-tools/1500.ob-partition-calculator/200.use-of-the-ob-partition-calculator.md
+++ b/zh-CN/700.reference/1500.command-line-tools/1500.ob-partition-calculator/200.use-of-the-ob-partition-calculator.md
@@ -8,11 +8,11 @@
 
 在使用分区计算组件前，需要了解下列 OceanBase 数据的基本知识：
 
-* [分区计算组件实现介绍](../700.ob-partition-calculator/100.introduction-ob-partition-calculator.md)
+* [分区计算组件实现介绍](100.introduction-ob-partition-calculator.md)
 
 * [快速体验 OceanBase 数据库](../../../200.quickstart/100.quickly-experience-oceanbase-for-community.md)
 
-* [JDBC 连接池配置示例](../../../300.develop/100.application-development-of-mysql-mode/100.database-connection-with-client-of-mysql-mode/1400.use-the-database-connection-pool-of-mysql-mode/800.jdbc-connection-pool-configuration-example-of-mysql-mode.md)
+* [JDBC 连接池配置示例](../../../300.develop/200.application-development-of-oracle-mode/100.connect-to-oceanbase-database-of-oracle-mode/1300.use-the-database-connection-pool-of-oracle-mode/800.jdbc-connection-pool-configuration-example-of-oracle-mode.md)
 
 * [下载 JDBC 驱动](https://www.oceanbase.com/docs/common-oceanbase-cloud-10000000001781476)
 
