fix  aone issue

--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1800.gather-schema-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1800.gather-schema-stats-oracle.md
@@ -18,9 +18,6 @@ DBMS_STATS.GATHER_SCHEMA_STATS (
   degree             NUMBER DEFAULT NULL,
   granularity        VARCHAR2 DEFAULT DEFAULT_GRANULARITY,
   cascade            BOOLEAN DEFAULT NULL,
-  stattab            VARCHAR(65535) DEFAULT NULL,
-  statid             VARCHAR(65535) DEFAULT NULL,
-  statown            VARCHAR(65535) DEFAULT NULL,
   no_invalidate      BOOLEAN DEFAULT FALSE,
   stattype           VARCHAR2 DEFAULT 'DATA',
   force              BOOLEAN DEFAULT FALSE);
@@ -38,6 +35,7 @@ DBMS_STATS.GATHER_SCHEMA_STATS (
 | degree           | 并行度。默认值是 `NULL`。`NULL` 表示使用由 `CREATE TABLE` 或 `ALTER TABLE` 语句中的 `DEGREE` 子句指定的表默认值。当使用 `DEGREE=>NULL`、`DEGREE=>n` 时，如果对象的大小不保证实现并行执行，则 `DBMS_STATS` 可能会使用串行执行。  |
 | granularity      | 要收集的统计信息的粒度（仅适用于当表已分区时）。 <ul><li> `ALL`：收集所有（子分区、分区和全局）统计信息。    </li>   <li> `APPROX_GLOBAL AND PARTITION`： 类似于 `GLOBAL AND PARTITION`，但在这种情况下，全局统计信息是分区级别统计信息的汇总。此选项将汇总不同值的数量和索引不同键的数量之外的所有统计信息。但只汇总带有统计信息的分区。如果 `partname` 为 `NULL` 或无法执行汇总（例如缺少其中一个分区的统计信息），则会收集全局统计信息。    </li>   <li> `AUTO`：根据分区类型确定粒度。是默认值。    </li>   <li> `DEFAULT`：收集全局和分区级别的统计信息。此选项已废弃，建议使用 `GLOBAL AND PARTITION`。    </li>   <li> `GLOBAL`：收集全局统计数据。    </li>   <li> `GLOBAL AND PARTITION`：收集全局和分区级别的统计信息。即使是复合分区对象，也不会收集子分区级别的统计信息。    </li>   <li> `PARTITION`：收集分区级别的统计信息。    </li>   <li> `SUBPARTITION`：收集子分区级别的统计信息。    |
 | cascade          | 除了收集表和列统计信息之外，还会收集有关索引的统计信息，等效于在 Schema 中的每个索引上运行 `GATHER_INDEX_STATS` 过程。 |
+| no_invalidate| 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
 | stattype         | 当前统计信息所存储的位置。  |
 | force            | 是否强制收集，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会收集统计信息。     |
 
@@ -56,11 +54,15 @@ DBMS_STATS.GATHER_SCHEMA_STATS (
 
 要调用此过程，必须是表的所有者。对于使用由 `SYS` 所拥有的对象，需要是表的所有者或 `SYSDBA` 权限才能调用此过程。
 
+需要注意的是，对于取值为 `TRUE` 和 `FALSE` 的参数，需要在 `BEGIN ... END` 块中执行该过程。
+
 ## 示例 
 
 收集 `hr` 下所有表的统计信息。
 
 ```sql
-obclient> CALL DBMS_STATS.GATHER_SCHEMA_STATS ('hr', degree=>64);
+obclient> BEGIN 
+    DBMS_STATS.GATHER_SCHEMA_STATS ('hr', degree=>64,no_invalidate=>TRUE);
+    END;
 Query OK, 0 rows affected
 ```
